# ocr-medical-prescription-benchmark

./: .gitignore  01_comparacao_ocr.py  =0.4.0  LICENSE  pyproject.toml  resultados_paddle.csv  resultados_qwen (1).csv  resultados_qwen.csv  resultados_qwen4b.csv  resultados_tesseract.csv  resultados_trocr.csv
RxHandBD/: Test_Labels.csv  Train_Label.csv
results/: resultados_qwen4b (1).csv
