[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "jiwer>=4.0.0",
    "marimo>=0.23.14",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "opencv-python>=5.0.0.93",
    "paddleocr>=3.7.0",
    "pandas>=2.3.3",
    "pillow>=12.3.0",
    "pytesseract>=0.3.13",
    "python-levenshtein>=0.27.3",
    "sentencepiece>=0.2.2",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "transformers>=5.14.1",
    "olmocr>=0.4.0",
    "visidata>=3.4",
    "watchdog>=6.0.0",
]
